--- a/Presto.SWCamp.Lyrics/Presto.SWCamp.Lyrics/LyricsWindow.xaml
+++ b/Presto.SWCamp.Lyrics/Presto.SWCamp.Lyrics/LyricsWindow.xaml
@@ -28,7 +28,7 @@
         <TextBlock
             SnapsToDevicePixels="True"
             FontSize="24" x:Name="textLyrics"
-            Text="가사가 여기에 표시됩니다."
+            Text="가사 준비중"
             TextAlignment="Center" FontFamily="Malgun Gothic" TextDecorations="{x:Null}" TextOptions.TextFormattingMode="Display" Foreground="White" TextOptions.TextHintingMode="Fixed" FontWeight="Bold" RenderTransformOrigin="0.1,0.5" >
             <TextBlock.Effect>
                 <DropShadowEffect ShadowDepth="2" Direction="270" BlurRadius="7"/>
