--- a/Presto.SWCamp.Lyrics/Presto.SWCamp.Lyrics/LyricsWindow.xaml
+++ b/Presto.SWCamp.Lyrics/Presto.SWCamp.Lyrics/LyricsWindow.xaml
@@ -24,11 +24,28 @@
             FontSize="14"
             Text="{Binding Player.CurrentMusic.Title}"
             TextAlignment="Center" FontFamily="NanumGothic" FontWeight="Bold" Foreground="White" />
+        <TextBlock
+            SnapsToDevicePixels="True"
+            FontSize="24" x:Name="textBeforeLyrics"
+            TextAlignment="Center" FontFamily="Malgun Gothic" TextDecorations="{x:Null}" TextOptions.TextFormattingMode="Display" Foreground="DimGray" TextOptions.TextHintingMode="Fixed" FontWeight="Bold" RenderTransformOrigin="0.1,0.5" >
+            <TextBlock.Effect>
+                <DropShadowEffect ShadowDepth="2" Direction="270" BlurRadius="7"/>
+            </TextBlock.Effect>
+        </TextBlock>
 
         <TextBlock
             SnapsToDevicePixels="True"
             FontSize="24" x:Name="textLyrics"
             TextAlignment="Center" FontFamily="Malgun Gothic" TextDecorations="{x:Null}" TextOptions.TextFormattingMode="Display" Foreground="White" TextOptions.TextHintingMode="Fixed" FontWeight="Bold" RenderTransformOrigin="0.1,0.5" >
+            <TextBlock.Effect>
+                <DropShadowEffect ShadowDepth="2" Direction="270" BlurRadius="7"/>
+            </TextBlock.Effect>
+        </TextBlock>
+        
+        <TextBlock
+            SnapsToDevicePixels="True"
+            FontSize="24" x:Name="textNextLyrics"
+            TextAlignment="Center" FontFamily="Malgun Gothic" TextDecorations="{x:Null}" TextOptions.TextFormattingMode="Display" Foreground="DimGray" TextOptions.TextHintingMode="Fixed" FontWeight="Bold" RenderTransformOrigin="0.1,0.5" >
             <TextBlock.Effect>
                 <DropShadowEffect ShadowDepth="2" Direction="270" BlurRadius="7"/>
             </TextBlock.Effect>
